--- a/splatter/Gemfile
+++ b/splatter/Gemfile
@@ -6,6 +6,9 @@ gem 'rails', '4.0.0'
 
 gem 'rails-api'
 
+gem 'mongoid', github: 'mongoid/mongoid'
+
+gem 'bson_ext'
 # Use sqlite3 as the database for Active Record
 gem 'sqlite3'
 
