--- a/splatter/Gemfile
+++ b/splatter/Gemfile
@@ -10,7 +10,8 @@ gem 'rails-api'
 gem 'sqlite3'
 
 
-
+gem 'riak-client'
+gem 'hashie'
 
 # To use ActiveModel has_secure_password
 # gem 'bcrypt-ruby', '~> 3.1.2'
